--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_weight="1"
+        android:layout_weight="8"
         >
 
         <ImageView
@@ -46,11 +46,26 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_margin="3dp"
         android:padding="2dp"
-        android:layout_width="match_parent"
+        android:layout_weight="3"
+        android:layout_width="wrap_content"
         android:background="#AA00F0AA"
+        android:id="@+id/keywords"
         android:layout_height="wrap_content"
         android:text="@string/keyword_view"/>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:padding="2dp"
+        android:layout_margin="3dp"
+        android:layout_weight="10"
+        android:visibility="invisible"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
