--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,23 +10,19 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        layout_below="@id/layoutDots"/>
 
     <LinearLayout
         android:id="@+id/layoutDots"
+        android:layout_above="@id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dots_height"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/dots_margin_bottom"
-        android:gravity="center"
-        android:orientation="horizontal"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:alpha=".5"
-            android:layout_above="@id/layoutDots"
-            android:background="@android:color/white" />
+        android:gravity="center"
+        android:background="#AA000000"
+        android:orientation="horizontal"/>
 
         <Button
             android:id="@+id/btn_next"
@@ -34,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:background="@null"
+
             android:text="@string/next"
             android:textColor="@android:color/white" />
 
@@ -44,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:background="@null"
+
             android:text="@string/skip"
             android:textColor="@android:color/white" />
 
