--- a/app/src/main/res/layout/welcome_slide_two.xml
+++ b/app/src/main/res/layout/welcome_slide_two.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen2">
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -12,14 +12,13 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/ic_movie" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/galleme_full" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slide_2_title"
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
@@ -32,10 +31,18 @@
             android:paddingRight="@dimen/desc_padding"
             android:text="@string/slide_2_desc"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/holo_blue_dark"
+            android:background="#AA000000"
+            android:layout_margin="20dp"
+            android:padding="5dp"
             android:textSize="@dimen/slide_desc" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Google STT"
+            android:textAllCaps="false"
+            android:background="@drawable/button"
+            android:onClick="goToPlayStore"/>
 
     </LinearLayout>
-
-
 </RelativeLayout>
